<resources>
    <string name="app_name">LlegaBien</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="titulo_bienvenida_guia">¡Hola, bienvenido!</string>
    <string name="frase_bienvenida_guia">A contuniación, te mostramos una guía de las principales funciones de LLEGABIEN.</string>
    <string name="titulo_ruta_guia">Creación de rutas seguras.</string>
    <string name="frase_ruta_guia">Obtenemos la ruta más segura en base a la seguridad de la calle o colonia por donde pase la ruta.</string>
    <string name="titulo_mapa_guia">Visualización de seguridad.</string>
    <string name="frase_mapa_guia">Mostramos en el mapa la seguridad de cada colonia con un código de colores.</string>
    <string name="titulo_reportes_guia">Reportes de usuarios.</string>
    <string name="frase_reportes_guia">Mantenemos nuestra información actualizada con reportes que el mismo usuario puede generar.</string>
    <string name="titulo_noti_guia">Botón de emeregncia.</string>
    <string name="frase_noti_guia">Ofrecemos un botón de emergencia en caso de que presencie o sea víctima de un delito.</string>
    <string name="titulo_pagina_principal">LLEGA BIEN</string>
    <string name="frase_pagina_principal1">Tu seguridad es </string>
    <string name="frase_pagina_principal2">primero</string>
    <string name="crear_cuenta_pagina_principal">Crea una cuenta</string>
    <string name="inicia_sesion_pagina_principal">Inicia sesión</string>
    <string name="derechos_pagina_principal">Todos los derechos reservados 2021</string>
    <string name="titulo_inicia_sesion">Inicia sesión</string>
    <string name="instrucciones_inicia_sesion1">Ingresa tus credenciales</string>
    <string name="recordar_inicia_sesion1">Recordar credenciales.</string>
    <string name="contraseñaOlvidada_inicia_sesion1">¿Olvidaste tu contraseña?</string>
    <string name="registrarse_inicia_sesion1">¿No tienes una cuenta? Registrate.</string>
    <string name="instrucciones_restablecer_contraseña">Restablece tu contraseña</string>
    <string name="instrucciones1_restablecer_contraseña_1">Si usted tiene registrado este número de telefónico con nosotros, recibirá un código de verificación para restablecer su contraseña.</string>
    <string name="instrucciones1_restablecer_contraseña_2">Ingresa el código de verificación que hemos enviado a tu número telefónico vía SMS.</string>
    <string name="instrucciones1_restablecer_contraseña_3">Ingresa una nueva contraseña. Después de hacer esto, tendrás que iniciar sesión nuevamente.</string>
    <string name="titulo_leerContactos">Contactos</string>
    <string name="descripcion_leerContactos">Aquí puedes ver la información de tus contactos de emergencia.</string>
    <string name="titulo_editarContacto">Editar contacto</string>
    <string name="descripcion_editarContacto">Aquí puedes editar la información del contacto seleccionado.</string>
    <string name="guardarCambiosBtn_editarContacto">Guardar cambios</string>
    <string name="titulo_listaReportes">Reportes generados</string>
    <string name="descripcion_listaReportes">Aquí puedes ver los reportes que has generado.</string>
    <string name="titulo_listaUsuarios_admin">Usuarios registrados</string>
    <string name="descripcion_listaUsuarios_admin">Aquí puedes ver los usuarios de la aplicación.</string>
    <string name="titulo_favoritos">Favoritos</string>
    <string name="descripcion_favoritos">Aquí puedes ver tus lugares favoritos.</string>
    <string name="titulo_mostrar_rutas">Rutas</string>
    <string name="descripcion_mostrar_rutas">Aquí puedes ver las rutas que has generado.</string>
    <string name="titulo_registro">Registro</string>
    <string name="instrucciones_registro">Ingresa tus datos personales</string>
    <string name="instrucciones1_registro1">Primero, ingresa tu nombre completo y fecha de nacimiento.</string>
    <string name="iniciarSesion_registro1">¿Tienes una cuenta? Inicia sesión</string>
    <string name="instrucciones1_registro2">Ahora, ingresa tu correo electrónico, número de teléfono y contraseña. </string>
    <string name="instrucciones1_registro3">Verifica tu número de teléfono y correo electrónico</string>
    <string name="instrucciones2_registro3">1. Para verificar tu correo electrónico, entra a tu email y haz clic en el enlace que se te ha envíado.</string>
    <string name="instrucciones3_registro3">2. Para verificar tu número de teléfono, ingresa el código que le hemos enviado vía SMS.</string>
    <string name="instrucciones1_registro4">Ingresa tus contactos de emergencia</string>
    <string name="instrucciones2.1_registro4">Para completar el registro es necesario que completes la siguiente información </string>
    <string name="instrucciones2.2_registro4">de por lo menos 2 contactos de emergencia. </string>
    <string name="contactoEmergencia_registro4">Contacto num. </string>
    <string name="contactoEmergencia_nombre_registro4">Nombre completo</string>
    <string name="contactoEmergencia_celular_registro4">Número de teléfono</string>
    <string name="finalizarBtn_registro4">Finalizar</string>
    <string name="errorStringVacia">Este campo es obligatorio</string>
    <string name="errorNombreApellidos">Ingresa un nombre o apellido válido.</string>
    <string name="errorFechaNacimiento">Debes tener por lo menos 16 años.</string>
    <string name="errorCorreoElectronico">Ingresa un correo electrónico válido.</string>
    <string name="errorNumeroTelefonico">Ingresa un número de teléfono movil válido.</string>
    <string name="errorContraseña">Usa 8 o más caracteres con una combinación de letras, números y símbolos.</string>
    <string name="errorConfirmarContraseña">Las contraseñas no coinciden</string>
    <string name="titulo_config">Configuración</string>
    <string name="contactos_config">Contactos de emergencia</string>
    <string name="historialRutas_config">Historial de rutas</string>
    <string name="historialReportes_config">Reportes generados</string>
    <string name="editarPerfil_config">Editar perfil</string>
    <string name="cerrarSesion_config">Cerrar sesión</string>
    <string name="titulo_editarPerfil">Perfil</string>
    <string name="instrucciones_editarPerfil">Información personal</string>
    <string name="cambiarContra_editarPerfil">Contraseña</string>
    <string name="eliminarCuenta_editarPerfil">Eliminar cuenta</string>
    <string name="titulo_cambiarContra">Contraseña</string>
    <string name="instrucciones_cambiarContra">Aquí puedes cambiar tu contraseña</string>
    <string name="actualContra_cambiarContra">Contraseña actual</string>
    <string name="nuevaContra">Contraseña nueva</string>
    <string name="otrosPerfiles_configAvan">Editar otros perfiles</string>
    <string name="subirReporte_configAvan">Subir reporte</string>
    <string name="configPropia_configAvan">Configuración de mi cuenta</string>
    <string name="instrucciones_tipoConfig">Selecciona la configuración que quieres abrir:</string>
    <string name="configUsuario_tipoConfig">Configuración de tu cuenta</string>
    <string name="configAdmin_tipoConfog">Configuración avanzada</string>
    <string name="titulo_subirReporte">Subir reporte</string>
    <string name="instrucciones_subirReporte">Aquí puedes subir reportes de delitos en formato .xml.</string>
    <string name="seleccionarArchivoBtn_subirReporte">Seleccionar archivos</string>
    <string name="titulo_barraBusqueda">Prueba buscar un lugar...</string>
    <string name="nombreLugar1_detallesNombre">Jardines del Valle</string>
    <string name="nombreLugar2_detallesNombre">Zapopan, Jalisco, México</string>
    <string name="seguridad_detallesNombre">¡Ve hacía el punto de partida! </string>
    <string name="mediaHistorica_detallesNombre">Media Histórica Semanal = </string>
    <string name="numDelitos_detallesNombre">Delitos última semana = </string>
    <string name="guardarBtn_detallesNombre">Guardar</string>
    <string name="indicacionesBtn_detallesNombre">Indicaciones</string>
    <string name="puntoPartida_indicaciones">Escribe tu punto de partida…</string>
    <string name="puntoDestino_indicaciones">Escribe tu punto de destino…</string>
    <string name="tiempoBiciBtn_indicaciones">Bicicleta</string>
    <string name="tiempoCaminandoBtn_indicaciones">Caminando</string>
    <string name="descripcionRuta_indicaciones">Rutas más segura debido a la inicidencia delictiva.</string>
    <string name="comenzarBtn_indicaciones">Comenzar</string>
    <string name="nombreCalleActual_navegacion">Calle Oasis 1476</string>
    <string name="nombreCalleSiguiente_navegacion">Av.Federalistas</string>
    <string name="enDireccionA_navegacion">en dirección a</string>
    <string name="centrar_navegacion">Centrar</string>
    <string name="seguridad_navegacion">Seguridad media</string>
    <string name="kmRestantes_horaDeLlegada_navegacion">0.3 km ・ 10.44 a.m</string>
    <string name="titulo_consejos">¡ADVERTENCIA!</string>
    <string name="descripcion_consejos">¡Cuidado! Pasaras por zonas inseguras donde usualmente ocurren los siguientes delitos</string>
    <string name="general_consejos"><![CDATA[ <b> ➊ Confié en su instinto: </b> Si alguien le incomoda, aléjese. <br/> <br/>
                                                  ➋ No use ropa ostentosa, ni joyas valiosas. <br/> <br/>
                                                  ➌ Siempre lleve consigo un artículo de defensa personal. <br/> <br/>
                                              <b> ➍ Mantenga comunicación constante con su familia: </b> Infórmeles dónde y con quién estará. <br/> <br/>
                                              <b> ➎ Evite la rutina: </b>  Salir a la misma hora, pasar por los mismos lugares, etc. <br/><br/>
                                                  ➏ Manténgase atento y vigilante de todo lo que sucede a su alrededor. <br/><br/>
                                                  ➐ Lleve el dinero necesario y no lo cuente en público. <br/><br/>
                                                  ➑ Cuando camine sobre las aceras, hágalo alejado del borde que da hacia la calle, así evitará los posibles arrebatos. <br/><br/>
                                                  ➒ Lleve bolsos u otras pertenencias de valor al frente contra su pecho y cubiertas por el antebrazo. <br/><br/>
                                                  ➊ De noche, evite caminar sobre aceras poco iluminadas y con posibles sitios que puedan servir de escondites para malhechores. <br/>]]></string>
    <string name="robo_consejos"><![CDATA[ <b> ➊ No llevar todo lo valioso junto: </b> El dinero, las llaves, las tarjetas y la documentación personal no deben estar juntas. <br/> <br/>
                                           <b> ➋ No dejar a la vista objetos de valor: </b> Un ordenador portátil, una buena cámara de fotos, el móvil de última generación. <br/> <br/>
                                           <b> ➌ Evite en lo posible las aglomeraciones: </b> Si observa algo anormal cruce la calle y aléjese del lugar. <br/> <br/>
                                               ➍ Evitar acercarte a dar indicaciones o limosnas si la calle está solitaria. <br/> <br/>
                                               ➎ De noche, caminar por calles iluminadas. <br/>]]></string>
    <string name="advertencia_dialogNotificarBateria">ADVERTENCIA</string>
    <string name="contenido_dialogNotificarBateria">Su dispositivo móvil tiene menos del 20% de bateria. La app notificará a sus contactos de emergencia.</string>
    <string name="enterado_dialogNotificarBateria">Enterado</string>
    <string name="titulo_permisos">Permiso de Ubicacion</string>
    <string name="descripcion_permisos">Necesitamos la ubicación de tu dispositivo móvil para esta esta función.</string>
    <string name="btnAceptarPermisos_permisos">Aceptar ubicación</string>
</resources>