<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="230dp"
    android:background="@drawable/bkgd_esquinas_redondeadas"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1_textView_button_tipoConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2_textView_button_tipoConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/textView_instrucciones_tipoConfig"
        style="@style/TxtViewTransparente"
        android:text="@string/instrucciones_tipoConfig"
        android:fontFamily="@font/subtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_tipoConfig"
        app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_tipoConfig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button_configUsuario_tipoConfig"
        style="@style/BtnMoradoOscuro"
        android:text="@string/configUsuario_tipoConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_tipoConfig"
        app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_tipoConfig"
        app:layout_constraintTop_toBottomOf="@id/textView_instrucciones_tipoConfig"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button_configAdmin_tipoConfig"
        style="@style/BtnMoradoOscuro"
        android:text="@string/configAdmin_tipoConfog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_tipoConfig"
        app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_tipoConfig"
        app:layout_constraintTop_toBottomOf="@id/button_configUsuario_tipoConfig"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>