<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.app.fragmento.FragmentoPermisos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLyt_parentPrincipal_permisos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_textView_button_permisos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2_textView_button_permisos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/textView_titulo_permisos"
            style="@style/TxtViewTransparente"
            android:fontFamily="@font/subtitulo"
            android:text="@string/titulo_permisos"
            android:textSize="@dimen/text_size_subtitulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="8:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_permisos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_permisos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"/>

        <TextView
            android:id="@+id/textView_instrucciones_permisos"
            style="@style/TxtViewTransparente"
            android:text="@string/descripcion_permisos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="6:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_permisos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_permisos"
            app:layout_constraintTop_toBottomOf="@id/textView_titulo_permisos"
            app:layout_constraintVertical_bias="0"/>

        <Button
            android:id="@+id/button_aceptarPermiso_permisos"
            style="@style/TxtViewTransparente"
            android:text="@string/btnAceptarPermisos_permisos"
            android:textColor="#3a2efe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="8:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_button_permisos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_button_permisos"
            app:layout_constraintTop_toBottomOf="@id/textView_instrucciones_permisos"
            app:layout_constraintVertical_bias="0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
