<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/morado_oscuro"
    tools:context=".frontend.pantallaPrincipalActivity">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_fragment_pagina_principal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.05" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline1_button_pagina_principal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.10" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2_button_pagina_principal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.90" />

  <TextView
      android:id="@+id/textView_titulo_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fontFamily="@font/titulo"
      android:gravity="center"
      android:text="@string/titulo_pagina_principal"
      android:textAllCaps="true"
      android:textColor="@color/azul_oscuro"
      android:textSize="@dimen/text_size_titulo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="6:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.05" />

  <TextView
      android:id="@+id/textView_frase_pagina_principal1"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@android:color/transparent"
      android:fontFamily="@font/subtitulo"
      android:gravity="center"
      android:text="@string/frase_pagina_principal1"
      android:textAllCaps="false"
      android:textColor="@color/blanco"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="7:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toBottomOf="@id/textView_titulo_pagina_principal"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/textView_frase_pagina_principal2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@android:color/transparent"
      android:fontFamily="@font/subtitulo"
      android:gravity="center"
      android:text="@string/frase_pagina_principal2"
      android:textAllCaps="false"
      android:textColor="#FF9292"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="8:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toBottomOf="@id/textView_frase_pagina_principal1"
      app:layout_constraintVertical_bias="0.0" />

  <ImageView
      android:id="@+id/imageView1_bkgd_gif_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:srcCompat="@drawable/bkgd_morado_claro"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="5:4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textView_frase_pagina_principal2"
      app:layout_constraintVertical_bias="0.1"/>

  <ImageView
      android:id="@+id/imageView2_gif_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="1:1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textView_frase_pagina_principal2"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/button_crea_cuenta_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/bkgd_button_blanco"
      android:fontFamily="@font/parrafo_bold"
      android:gravity="center"
      android:paddingBottom="10dp"
      android:text="@string/crear_cuenta_pagina_principal"
      android:textAllCaps="false"
      android:textColor="@color/azul_oscuro"
      android:textSize="@dimen/text_size_parrafo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="4:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toBottomOf="@id/imageView1_bkgd_gif_pagina_principal"
      app:layout_constraintVertical_bias="0.2" />

  <Button
      android:id="@+id/button_inicia_sesion_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/bkgd_button_azul_oscuro"
      android:fontFamily="@font/parrafo_bold"
      android:gravity="center"
      android:paddingBottom="10dp"
      android:text="@string/inicia_sesion_pagina_principal"
      android:textAllCaps="false"
      android:textColor="@color/blanco"
      android:textSize="@dimen/text_size_parrafo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="4:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toBottomOf="@id/button_crea_cuenta_pagina_principal"
      app:layout_constraintVertical_bias="0.1" />

  <TextView
      android:id="@+id/derechos_pagina_principal"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fontFamily="@font/parrafo"
      android:gravity="center"
      android:text="@string/derechos_pagina_principal"
      android:textAllCaps="false"
      android:textColor="@color/blanco"
      android:textSize="@dimen/text_size_parrafo_small"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="7:1"
      app:layout_constraintEnd_toEndOf="@id/guideline2_button_pagina_principal"
      app:layout_constraintStart_toStartOf="@id/guideline1_button_pagina_principal"
      app:layout_constraintTop_toBottomOf="@id/button_inicia_sesion_pagina_principal"
      app:layout_constraintVertical_bias="0.3" />

  <FrameLayout
      android:id="@+id/fragment_pantallaPrincipal"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:elevation="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintDimensionRatio="1:0"
      app:layout_constraintTop_toTopOf="@id/guideline_fragment_pagina_principal"
      tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>