<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".frontend.contactos.fragmento.FragmentoRegistrarContacto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLyt_parentPrincipal_registroContactos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco"
        android:backgroundTint="@color/blanco">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_textView_editView_registroContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2_textView_editView_registroContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_button_registroContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2_button_registroContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <TextView
            android:id="@+id/textView_titulo_registroContactos"
            style="@style/TxtViewBlanco"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/contactoEmergencia_registro4"
            android:textSize="@dimen/text_size_titulo_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="6:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_editView_registroContactos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_editView_registroContactos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/editText_nombre_registroContactos"
            style="@style/EditTextTransparente"
            android:hint="@string/contactoEmergencia_nombre_registro4"
            android:inputType="textAutoCorrect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_editView_registroContactos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_editView_registroContactos"
            app:layout_constraintTop_toBottomOf="@id/textView_titulo_registroContactos"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/editText_celular_registroContactos"
            style="@style/EditTextTransparente"
            android:hint="@string/contactoEmergencia_celular_registro4"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="@id/guideline2_textView_editView_registroContactos"
            app:layout_constraintStart_toStartOf="@id/guideline1_textView_editView_registroContactos"
            app:layout_constraintTop_toBottomOf="@id/editText_nombre_registroContactos"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>